@@ -6,6 +6,9 @@ Game:
  * Fix hog being unable to walk after using sniper rifle without firing both shots
  * Fix teleport tooltip claiming it doesn't end turn in hog placing phase with inf. attack
 
+Highlander:
+ * Fix all hogs getting teleport after hog placement phase
+
 Continental supplies:
  + Continents are now selected before the game starts
  + Continents give hog different start health
